--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 .DS_Store
 .env
 TODO.md
+udtools/js/dist/
+udtools/docs/
+udtools/*/generated/
+__pycache__/
+.ipynb_checkpoints
+.vs/
+.vscode/
+node_modules/
