--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,11 +52,11 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: secretkey
 
   cms:
-    image: strapi/strapi:3.5.4-alpine
+    image: strapi/strapi:3.4.6-node10-alpine
     volumes:
       - strapi-data:/srv/app
     ports:
-      - '8883:1337'
+      - "8883:1337"
 
   # udtools:
   #   image: .
